# lerobot

./: docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
configs/flow_matching/eval/: aloha_transfer.yaml  libero.yaml  pusht.yaml
configs/flow_matching/eval_uncertainty_estimation/: aloha_transfer.yaml  libero.yaml  libero_diffusion.yaml  pusht.yaml
configs/flow_matching/find_failure_seeds/: aloha_transfer.yaml  libero.yaml
configs/flow_matching/find_iid_failure_seeds/: aloha_transfer.yaml
configs/flow_matching/laplace_fitting/: libero.yaml
configs/flow_matching/record_fiper_data/: libero.yaml  pusht.yaml
configs/flow_matching/record_fiper_rollout/: libero.yaml  pusht.yaml
configs/flow_matching/score_fiper_rollout/: libero.yaml  pusht.yaml
configs/flow_matching/train/: aloha_insertion.yaml  aloha_transfer.yaml  libero.yaml  pusht.yaml
configs/flow_matching/visualize/: aloha_transfer.yaml  libero.yaml  libero_diffusion.yaml  pusht.yaml
configs/flow_matching/visualize_bayesian_sampler/: libero.yaml  pusht.yaml
configs/flow_matching/visualize_composed_seq/: libero.yaml  pusht.yaml
configs/flow_matching/visualize_composed_seq_sampler/: libero.yaml  pusht.yaml
configs/flow_matching/visualize_ensemble/: libero.yaml  libero_diffusion.yaml  pusht.yaml
configs/flow_matching/visualize_laplace/: pusht.yaml
configs/smolvla/eval/: libero.yaml
configs/smolvla/eval_uncertainty_estimation/: libero.yaml
configs/smolvla/laplace_fitting/: lego_stacking.yaml  libero.yaml
configs/smolvla/record_fiper_data/: libero.yaml
configs/smolvla/record_fiper_rollout/: libero.yaml
configs/smolvla/score_fiper_rollout/: libero.yaml
configs/smolvla/train/: lego_stacking.yaml  lego_stacking_finetuning.yaml  lego_stacking_scratch.yaml  libero.yaml  libero_finetuning.yaml  libero_scratch.yaml  pusht.yaml  so100_stacking.yaml
configs/smolvla/visualize/: libero.yaml
configs/smolvla/visualize_bayesian_sampler/: libero.yaml
configs/smolvla/visualize_composed_seq_sampler/: libero.yaml
docker/lerobot-gpu-dev/: Dockerfile
examples/: 3_train_policy.py
examples/training/: train_policy.py
lerobot/: __init__.py
lerobot/common/: constants.py
lerobot/common/datasets/: factory.py
lerobot/common/envs/: configs.py  factory.py  utils.py  wrappers.py
lerobot/common/policies/: factory.py  normalize.py  pretrained.py  utils.py
lerobot/common/policies/flow_matching/: conditional_probability_path.py  configuration_flow_matching.py  configuration_flow_matching_uncertainty_sampler.py  configuration_uncertainty_sampler.py  estimate_uncertainty.py  laplace_utils.py  modelling_flow_matching.py  ode_solver.py  uncertainty_estimation_utils.py  visualization_utils.py  visualizer.py
lerobot/common/policies/vqbet/: configuration_vqbet.py  modeling_vqbet.py
lerobot/common/utils/: io_utils.py  live_window.py  utils.py  wandb_utils.py
lerobot/configs/: default.py  eval.py  eval_uncertainty_estimation.py  find_failure_seeds.py  find_iid_failure_seeds.py  fiper_data_recording.py  policies.py  train.py  visualize.py  visualize_composed_seq.py  visualize_ensemble.py  visualize_laplace.py
lerobot/scripts/: compute_flow_matching_likelihood.py  estimate_flow_matching_uncertainty.py  eval.py  eval_uncertainty_estimation.py  find_failure_seeds.py  find_iid_failure_seeds.py  read_pickle_file.py  test_flow_matching_likelihood_computation.py  train.py  visualize_flow_matching.py
lerobot/scripts/flow_matching/: eval_uncertainty_estimation.py  record_fiper_data.py  visualize.py  visualize_composed_seq_ue.py  visualize_composed_seq_uncertainty_estimation.py  visualize_ensemble_uncertainty_estimation.py  visualize_laplace.py
src/lerobot/: __init__.py  constants.py
src/lerobot/async_inference/: constants.py
src/lerobot/configs/: default.py  eval.py  eval_uncertainty_estimation.py  fiper_data_recording.py  fiper_rollout_recording.py  fiper_rollout_scoring.py  fit_laplace_posterior.py  train.py  visualize.py  visualize_bayesian_sampler.py  visualize_composed_seq.py  visualize_composed_seq_sampler.py  visualize_ensemble.py  visualize_laplace.py
src/lerobot/datasets/: compute_stats.py  factory.py  sampler.py  utils.py
src/lerobot/datasets/v30/: convert_dataset_v21_to_v30.py
src/lerobot/envs/: configs.py  factory.py  libero.py  utils.py  wrappers.py
src/lerobot/fiper_data_generator/: configuration_fiper_rollout_recorder.py  fiper_rollout_recorder.py  fiper_rollout_scorer.py
src/lerobot/fiper_data_recorder/: configuration_fiper_data_recorder.py  configuration_fiper_rollout_scorer.py  fiper_data_recorder.py  fiper_rollout_recorder.py  fiper_rollout_scorer.py
src/lerobot/policies/: __init__.py  factory.py  pretrained.py  utils.py
src/lerobot/policies/common/: aloha.py
src/lerobot/policies/diffusion/: configuration_diffusion.py  modeling_diffusion.py
src/lerobot/policies/flow_matching/: configuration_flow_matching.py  flow_matching_adapter.py  modelling_flow_matching.py  ode_solver.py  processor_flow_matching.py
src/lerobot/policies/smolvla/: configuration_smolvla.py  modeling_smolvla.py  smolvla_adapter.py  smolvlm_with_expert.py
src/lerobot/policies/vqbet/: configuration_vqbet.py  modeling_vqbet.py
src/lerobot/processor/: env_processor.py  migrate_policy_normalization.py  normalize_processor.py
src/lerobot/rl/: learner.py  wandb_utils.py
src/lerobot/scripts/: eval.py  find_failure_seeds.py  lerobot_eval.py  lerobot_train.py  record_fiper_data.py  train.py  visualize_dataset_stats.py  visualize_flow_matching.py
src/lerobot/utils/: constants.py  io_utils.py  wandb_utils.py
src/lerobot/visualizer/: __init__.py  action_seq.py  configuration_visualizer.py  flow.py  noise_to_action.py  utils.py  vector_field.py  visualizer.py
src/lerobot/visualizers/: action_seq.py  flow.py  noise_to_action.py  utils.py  vector_field.py
tests/artifacts/policies/: save_policy_to_safetensors.py
tests/datasets/: test_datasets.py
tests/policies/: test_policies.py
train_configs/flow_matching/: aloha_transfer.yaml
(+104 files in other folders)
