# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project.urls]
homepage = "https://github.com/huggingface/lerobot"
issues = "https://github.com/huggingface/lerobot/issues"
discord = "https://discord.gg/s3KuuzsPFb"

[project]
name = "lerobot"
version = "0.1.0"
description = "🤗 LeRobot: State-of-the-art Machine Learning for Real-World Robotics in Pytorch"
authors = [
    { name = "Rémi Cadène", email = "re.cadene@gmail.com" },
    { name = "Simon Alibert", email = "alibert.sim@gmail.com" },
    { name = "Alexander Soare", email = "alexander.soare159@gmail.com" },
    { name = "Quentin Gallouédec", email = "quentin.gallouedec@ec-lyon.fr" },
    { name = "Adil Zouitine", email = "adilzouitinegm@gmail.com" },
    { name = "Thomas Wolf", email = "thomaswolfcontact@gmail.com" },
    { name = "Steven Palma", email = "imstevenpmwork@ieee.org" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
keywords = ["robotics", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "absl-py == 2.2.1",
    "aiohappyeyeballs == 2.6.1",
    "aiohttp == 3.11.14",
    "aiosignal == 1.3.2",
    "annotated-types == 0.7.0",
    "antlr4-python3-runtime == 4.9.3",
    "asciitree == 0.3.3",
    "asdfghjkl == 0.1a4",
    "async-timeout == 5.0.1",
    "attrs == 25.3.0",
    "av == 12.3.0",
    "backpack-for-pytorch == 1.7.1",
    "beautifulsoup4 == 4.13.3",
    "blinker == 1.9.0",
    "certifi == 2025.1.31",
    "cffi == 1.17.1",
    "charset-normalizer == 3.4.1",
    "click == 8.1.8",
    "cloudpickle == 3.1.1",
    "cmake == 4.0.0",
    "contourpy == 1.3.2",
    "curvlinops-for-pytorch == 2.0.1",
    "cycler == 0.12.1",
    "datasets == 3.5.0",
    "deepdiff == 8.4.2",
    "diffusers == 0.32.2",
    "dill == 0.3.8",
    "dm-control == 1.0.14",
    "dm-env == 1.6",
    "dm-tree == 0.1.9",
    "docker-pycreds == 0.4.0",
    "draccus == 0.10.0",
    "einconv == 0.1.0",
    "einops == 0.8.1",
    "evdev == 1.9.1",
    "exceptiongroup == 1.2.2",
    "Farama-Notifications == 0.0.4",
    "fasteners == 0.19",
    "filelock == 3.18.0",
    "Flask == 3.1.0",
    "fonttools == 4.57.0",
    "frozenlist == 1.5.0",
    "fsspec == 2024.12.0",
    "gdown == 5.2.0",
    "gitdb == 4.0.12",
    "GitPython == 3.1.44",
    "glfw == 2.8.0",
    "gym-aloha == 0.1.1",
    "gym-pusht == 0.1.5",
    "gym-xarm == 0.1.1",
    "gymnasium == 0.29.1",
    "gymnasium-robotics == 1.2.4",
    "h5py == 3.13.0",
    "hf_transfer == 0.1.9",
    "huggingface-hub[hf-transfer,cli]>=0.27.1 ; python_version < '4.0'",
    "idna == 3.10",
    "imageio == 2.37.0",
    "imageio-ffmpeg == 0.6.0",
    "importlib_metadata == 8.6.1",
    "iniconfig == 2.1.0",
    "inquirerpy == 0.3.4",
    "itsdangerous == 2.2.0",
    "Jinja2 == 3.1.6",
    "jsonlines == 4.0.0",
    "kiwisolver == 1.4.8",
    "labmaze == 1.0.6",
    "laplace-torch == 0.2.2.2",
    "lazy_loader == 0.4",
    "lightning-utilities == 0.14.3",
    "llvmlite == 0.44.0",
    "lxml == 5.3.1",
    "MarkupSafe == 3.0.2",
    "matplotlib == 3.10.1",
    "mergedeep == 1.3.4",
    "mpmath == 1.3.0",
    "mujoco == 2.3.7",
    "multidict == 6.3.0",
    "multiprocess == 0.70.16",
    "mypy-extensions == 1.0.0",
    "networkx == 3.4.2",
    "numba == 0.61.0",
    "numcodecs == 0.13.1",
    "numpy == 1.26.4",
    "nvidia-cublas-cu12 == 12.4.5.8",
    "nvidia-cuda-cupti-cu12 == 12.4.127",
    "nvidia-cuda-nvrtc-cu12 == 12.4.127",
    "nvidia-cuda-runtime-cu12 == 12.4.127",
    "nvidia-cudnn-cu12 == 9.1.0.70",
    "nvidia-cufft-cu12 == 11.2.1.3",
    "nvidia-curand-cu12 == 10.3.5.147",
    "nvidia-cusolver-cu12 == 11.6.1.9",
    "nvidia-cusparse-cu12 == 12.3.1.170",
    "nvidia-cusparselt-cu12 == 0.6.2",
    "nvidia-nccl-cu12 == 2.21.5",
    "nvidia-nvjitlink-cu12 == 12.4.127",
    "nvidia-nvtx-cu12 == 12.4.127",
    "omegaconf == 2.3.0",
    "opencv-python == 4.11.0.86",
    "opt_einsum == 3.4.0",
    "orderly-set == 5.3.0",
    "packaging == 24.2",
    "pandas == 2.2.3",
    "pettingzoo == 1.24.3",
    "pfzy == 0.3.4",
    "pillow == 11.1.0",
    "platformdirs == 4.3.7",
    "pluggy == 1.5.0",
    "prompt_toolkit == 3.0.50",
    "propcache == 0.3.1",
    "protobuf == 5.29.4",
    "psutil == 7.0.0",
    "pyarrow == 19.0.1",
    "pycparser == 2.22",
    "pydantic == 2.11.1",
    "pydantic_core == 2.33.0",
    "pygame == 2.6.1",
    "pymunk == 6.11.1",
    "pynput == 1.8.1",
    "PyOpenGL == 3.1.9",
    "pyparsing == 3.2.3",
    "pyserial == 3.5",
    "PySocks == 1.7.1",
    "pytest == 8.3.5",
    "python-dateutil == 2.9.0.post0",
    "python-xlib == 0.33",
    "pytz == 2025.2",
    "PyYAML == 6.0.2",
    "pyyaml-include == 1.4.1",
    "pyzmq == 26.3.0",
    "regex == 2024.11.6",
    "requests == 2.32.3",
    "rerun-sdk == 0.22.1",
    "safetensors == 0.5.3",
    "scikit-image == 0.25.2",
    "scipy == 1.11.4",
    "sentry-sdk == 2.25.0",
    "setproctitle == 1.3.5",
    "shapely == 2.0.7",
    "six == 1.17.0",
    "smmap == 5.0.2",
    "soupsieve == 2.6",
    "sympy == 1.13.1",
    "termcolor == 3.0.0",
    "tifffile == 2025.3.30",
    "toml == 0.10.2",
    "tomli == 2.2.1",
    "torch == 2.6.0",
    "torchcodec == 0.2.1",
    "torchdiffeq == 0.2.5",
    "torchmetrics == 1.7.2",
    "torchvision == 0.21.0",
    "tqdm == 4.67.1",
    "triton == 3.2.0",
    "typing-inspect == 0.9.0",
    "typing-inspection == 0.4.0",
    "typing_extensions == 4.13.0",
    "tzdata == 2025.2",
    "unfoldNd == 0.2.3",
    "urllib3 == 2.3.0",
    "wandb == 0.19.8",
    "wcwidth == 0.2.13",
    "Werkzeug == 3.1.3",
    "wrapt == 1.17.2",
    "xxhash == 3.5.0",
    "yarl == 1.18.3",
    "zarr == 2.18.3",
    "zipp == 3.21.0",
]

[project.optional-dependencies]
aloha = ["gym-aloha>=0.1.1 ; python_version < '4.0'"]
dev = ["pre-commit>=3.7.0", "debugpy>=1.8.1"]
dora = [
    "gym-dora @ git+https://github.com/dora-rs/dora-lerobot.git#subdirectory=gym_dora ; python_version < '4.0'",
]
dynamixel = ["dynamixel-sdk>=3.7.31", "pynput>=1.7.7"]
feetech = ["feetech-servo-sdk>=1.0.0", "pynput>=1.7.7"]
intelrealsense = ["pyrealsense2>=2.55.1.6486 ; sys_platform != 'darwin'"]
pi0 = ["transformers>=4.48.0"]
pusht = ["gym-pusht>=0.1.5 ; python_version < '4.0'"]
stretch = [
    "hello-robot-stretch-body>=0.7.27 ; python_version < '4.0' and sys_platform == 'linux'",
    "pyrender @ git+https://github.com/mmatl/pyrender.git ; sys_platform == 'linux'",
    "pyrealsense2>=2.55.1.6486 ; sys_platform != 'darwin'",
    "pynput>=1.7.7",
]
test = ["pytest>=8.1.0", "pytest-cov>=5.0.0", "pyserial>=3.5"]
umi = ["imagecodecs>=2024.1.1"]
video_benchmark = ["scikit-image>=0.23.2", "pandas>=2.2.2"]
xarm = ["gym-xarm>=0.1.1 ; python_version < '4.0'"]

[tool.poetry]
requires-poetry = ">=2.1"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["tests/artifacts/**/*.safetensors"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks",
    "lerobot/common/datasets/push_dataset_to_hub",
    "lerobot/common/datasets/v2/convert_dataset_v1_to_v2",
    "lerobot/common/policies/pi0/conversion_scripts",
    "lerobot/scripts/push_dataset_to_hub.py",
]
skips = ["B101", "B311", "B404", "B603"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",                      # spellchecker:disable-line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # spellchecker:<on|off>
]
default.extend-ignore-identifiers-re = [
    # Add individual words here to ignore them
    "2nd",
    "pn",
    "ser",
    "ein",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
